--- a/index.css
+++ b/index.css
@@ -1,3 +1,40 @@
-#heading{
-    color:red;
+.header-container{
+    display:flex;
+    justify-content:space-between;
+    border :1px solid black
+}
+.logo{
+    width:100px;
+}
+
+.nav-items > ul {
+    display :flex;
+    list-style-type:none;
+}
+.nav-items >ul >li{
+    margin:10px;
+    padding:10px
+   
+}
+.restaurant-container{
+    display:flex;
+    flex-wrap:wrap;
+}
+.restaurant-card{
+padding:5px;  
+margin:5px;
+width:200px;
+height:310px;
+
+}
+.restaurant-card:hover{
+    cursor:pointer;
+    border:1px solid black;
+}
+.search-bar{
+    padding:10px;
+}
+
+.restaurant-logo{
+    width:100%;
 }
