Folder restructring,utils,export-default and export using named constants

--- a/index.css
+++ b/index.css
@@ -23,8 +23,8 @@
 .restaurant-card{
 padding:5px;  
 margin:5px;
-width:200px;
-height:310px;
+width:250px;
+
 
 }
 .restaurant-card:hover{
@@ -37,4 +37,6 @@ height:310px;
 
 .restaurant-logo{
     width:100%;
+    height:160px;
+    object-fit:cover;
 }
