--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
     display:flex;
     justify-content:space-between;
     border :1px solid black
+    
 }
 .logo{
     width:100px;
@@ -15,6 +16,11 @@
     margin:10px;
     padding:10px
    
+}
+.login{
+    margin:10px
+    padding :0px 5px;
+    cursor:pointer;
 }
 .restaurant-container{
     display:flex;
@@ -31,8 +37,13 @@ width:250px;
     cursor:pointer;
     border:1px solid black;
 }
-.search-bar{
+.filter{
     padding:10px;
+    display:flex
+    
+}
+.search{
+    margin:10px;
 }
 
 .restaurant-logo{
@@ -42,4 +53,16 @@ width:250px;
 }
 .top-rated-restaurant{
     cursor:pointer;
+}
+
+.shimmer-container{
+    display:flex;
+    flex-wrap:wrap;
+}
+.shimmer-card{
+    margin:15px;
+    width:250px;
+    height:400px;
+    background-color:#f0f0f0;
+
 }
