--- a/index.css
+++ b/index.css
@@ -37,12 +37,12 @@ width:250px;
     cursor:pointer;
     border:1px solid black;
 }
-.filter{
+.filter-section{
     padding:10px;
     display:flex
     
 }
-.search{
+.searchAndTopRated{
     margin:10px;
 }
 
@@ -53,6 +53,7 @@ width:250px;
 }
 .top-rated-restaurant{
     cursor:pointer;
+    margin:20px;
 }
 
 .shimmer-container{
