--- a/index.css
+++ b/index.css
@@ -67,3 +67,8 @@ width:250px;
     background-color:#f0f0f0;
 
 }
+.user-card{
+    background-color:#f0f0f0;
+    border:1px solid black;
+    padding:10px;
+}
