--- a/index.css
+++ b/index.css
@@ -1,74 +1,1 @@
-.header-container{
-    display:flex;
-    justify-content:space-between;
-    border :1px solid black
-    
-}
-.logo{
-    width:100px;
-}
-
-.nav-items > ul {
-    display :flex;
-    list-style-type:none;
-}
-.nav-items >ul >li{
-    margin:10px;
-    padding:10px
-   
-}
-.login{
-    margin:10px
-    padding :0px 5px;
-    cursor:pointer;
-}
-.restaurant-container{
-    display:flex;
-    flex-wrap:wrap;
-}
-.restaurant-card{
-padding:5px;  
-margin:5px;
-width:250px;
-
-
-}
-.restaurant-card:hover{
-    cursor:pointer;
-    border:1px solid black;
-}
-.filter-section{
-    padding:10px;
-    display:flex
-    
-}
-.searchAndTopRated{
-    margin:10px;
-}
-
-.restaurant-logo{
-    width:100%;
-    height:160px;
-    object-fit:cover;
-}
-.top-rated-restaurant{
-    cursor:pointer;
-    margin:20px;
-}
-
-.shimmer-container{
-    display:flex;
-    flex-wrap:wrap;
-}
-.shimmer-card{
-    margin:15px;
-    width:250px;
-    height:400px;
-    background-color:#f0f0f0;
-
-}
-.user-card{
-    background-color:#f0f0f0;
-    border:1px solid black;
-    padding:10px;
-}
+@import "tailwindcss";
